--- a/skins/impact-printer/style.css
+++ b/skins/impact-printer/style.css
@@ -797,7 +797,14 @@ body {
 #infobox .filter-group {
     display: flex;
     align-items: center;
-    gap: 40px;
+    gap: 8px;
+}
+
+#infobox .filter-group form {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
 }
 
 #infobox label.dim {
